<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rallycar_scan_matching</name>
  <version>1.0.0</version>
  <description>High-performance scan matching localization for autonomous racing vehicles</description>
  <maintainer email="jfasate@purdue.edu">Jayesh Fasate</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  
  <!-- Message types -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_msgs</depend>
  
  <!-- Transform libraries -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Math and computation -->
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  
  <!-- Hardware integration -->
  <depend>rallycar</depend>
  
  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
